[package]
name = "size_fmt"
version = "0.1.1"
edition = "2021"
categories = ["value-formatting", "no-std", "no-std::no-alloc"]
description = "This library formats sizes in a human readable format"
exclude = ["/.github/"]
homepage = "https://github.com/bydlw98/size_fmt"
keywords = ["format", "size", "no_std"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bydlw98/size_fmt"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itoa = "1.0.11"
libm = "0.2.8"
